Replace * with actual package versions

--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "node": ">= v0.8.0"
   },
   "devDependencies": {
-    "aws-sdk-apis": "*",
+    "aws-sdk-apis": "^3.1.10",
     "babel": "^5.8.23",
     "babelify": "^6.3.0",
-    "body-parser": "*",
-    "debug": "*",
-    "depd": "*",
-    "destroy": "*",
+    "body-parser": "^1.14.1",
+    "debug": "^2.2.0",
+    "depd": "^1.1.0",
+    "destroy": "^1.0.3",
     "eslint": "^1.4.3",
     "eslint-plugin-react": "^3.1.0",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
-    "etag": "*",
-    "express": "4.9.4",
-    "finalhandler": "*",
+    "etag": "^1.7.0",
+    "express": "^4.9.4",
+    "finalhandler": "^0.2.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
@@ -31,22 +31,22 @@
     "gulp-uglify": "^1.5.1",
     "http": "~0.0",
     "jade": "1.7",
-    "media-typer": "*",
+    "media-typer": "^0.3.0",
     "merge-stream": "^1.0.0",
-    "ms": "*",
+    "ms": "^0.6.2",
     "mysql": "~2.5",
-    "nconf": "*",
-    "on-finished": "*",
-    "proxy-addr": "*",
-    "qs": "*",
-    "supervisor": "*",
+    "nconf": "^0.8.2",
+    "on-finished": "^2.3.0",
+    "proxy-addr": "^1.0.8",
+    "qs": "^6.0.0",
+    "supervisor": "^0.9.1",
     "uglify": "^0.1.5",
-    "utils-merge": "*",
+    "utils-merge": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "when": "~3.1.0",
-    "xml2js": "*",
-    "xmlbuilder": "*"
+    "xml2js": "^0.4.15",
+    "xmlbuilder": "^4.1.0"
   },
   "browserify": {
     "transform": [
