--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^5.8.23",
     "babelify": "^6.3.0",
     "body-parser": "^1.14.1",
+    "cheerio": "*",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "destroy": "^1.0.3",
