Run unit tests on travis

--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   "devDependencies": {
     "aws-sdk-apis": "^3.1.10",
     "babel": "^5.8.23",
+    "babel-eslint": "*",
     "babelify": "^6.3.0",
     "body-parser": "^1.14.1",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "destroy": "^1.0.3",
     "eslint": "^1.4.3",
-    "eslint-plugin-react": "^3.1.0",
     "eslint-plugin-ideal": "^0.1.2",
-    "gulp-eslint": "*",
-    "babel-eslint": "*",
+    "eslint-plugin-react": "^3.1.0",
     "etag": "^1.7.0",
     "express": "^4.9.4",
     "finalhandler": "^0.2.0",
+    "gulp": "^3.9.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-eslint": "*",
     "gulp-minify-css": "^1.2.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.4.3",
     "gulp-sourcemaps": "^1.6.0",
@@ -41,6 +43,7 @@
     "on-finished": "^2.3.0",
     "proxy-addr": "^1.0.8",
     "qs": "^6.0.0",
+    "should": "^8.1.1",
     "supervisor": "^0.9.1",
     "uglify": "^0.1.5",
     "utils-merge": "^1.0.0",
