--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ node_js:
   - 0.10
 
 install : npm install
-script  : npm start
+script  :
+  - gulp
+  - gulp test
+  - sh compress.sh
 
 before_deploy:
 - gem install mime-types -v 2.6.2
