--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "finalhandler": "^0.2.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-minify-css": "^1.2.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.4.3",
     "gulp-sourcemaps": "^1.6.0",
@@ -35,6 +36,7 @@
     "jade": "1.7",
     "media-typer": "^0.3.0",
     "merge-stream": "^1.0.0",
+    "mocha": "^2.3.4",
     "ms": "^0.6.2",
     "mysql": "~2.5",
     "nconf": "^0.8.2",
@@ -42,6 +44,8 @@
     "proxy-addr": "^1.0.8",
     "qs": "^6.0.0",
     "supervisor": "^0.9.1",
+    "should": "^8.1.1",
+    "supertest": "^1.1.0",
     "uglify": "^0.1.5",
     "utils-merge": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
