--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "*",
     "babelify": "^6.3.0",
     "body-parser": "^1.14.1",
+    "chai": "^2.1.2",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "destroy": "^1.0.3",
@@ -35,6 +36,7 @@
     "gulp-uglify": "^1.5.1",
     "http": "~0.0",
     "jade": "1.7",
+    "jsdom": "^3.0.2",
     "media-typer": "^0.3.0",
     "merge-stream": "^1.0.0",
     "mocha": "^2.3.4",
@@ -44,6 +46,7 @@
     "on-finished": "^2.3.0",
     "proxy-addr": "^1.0.8",
     "qs": "^6.0.0",
+    "react-addons-test-utils": "^0.14.6",
     "should": "^8.1.1",
     "supervisor": "^0.9.1",
     "supertest": "^1.1.0",
@@ -90,7 +93,7 @@
     "moment": "^2.10.3",
     "npm": "^2.10.1",
     "plus-wrio-app": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
-    "react": "^0.13.3",
+    "react": "^0.14.6",
     "react-bootstrap": "^0.24.2",
     "reflux": "0.2.7",
     "showdown": "^1.1.0",
