--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-eslint": "*",
+    "gulp-headerfooter": "^1.0.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
@@ -48,8 +49,8 @@
     "qs": "^6.0.0",
     "react-addons-test-utils": "^0.14.6",
     "should": "^8.1.1",
-    "supervisor": "^0.9.1",
     "supertest": "^1.1.0",
+    "supervisor": "^0.9.1",
     "uglify": "^0.1.5",
     "utils-merge": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
