--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "devDependencies": {
     "aws-sdk-apis": "^3.1.10",
     "babel": "^5.8.23",
-    "babel-eslint": "5.0.0",
     "babelify": "^6.3.0",
     "body-parser": "^1.14.1",
     "chai": "^2.1.2",
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "destroy": "^1.0.3",
-    "eslint": "^1.4.3",
+    "eslint": "2.2.0",
+    "gulp-eslint": "2.0.0",
+    "babel-eslint": "5.0.0",
     "eslint-plugin-ideal": "^0.1.2",
     "eslint-plugin-react": "^3.1.0",
     "etag": "^1.7.0",
@@ -27,7 +28,6 @@
     "finalhandler": "^0.2.0",
     "gulp": "^3.9.0",
     "gulp-cssmin": "^0.1.7",
-    "gulp-eslint": "*",
     "gulp-headerfooter": "^1.0.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-mocha": "^2.2.0",
