--- a/package.json
+++ b/package.json
@@ -90,14 +90,15 @@
     "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "lodash": "^3.10.1",
-    "lodash.sortbyorder": "^3.1.4",
-    "lodash.sortby": "^3.1.4",
     "lodash.some": "*",
+    "lodash.sortby": "^3.1.4",
+    "lodash.sortbyorder": "^3.1.4",
     "moment": "^2.10.3",
     "npm": "^2.10.1",
     "plus-wrio-app": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
+    "react-router": "^2.0.1",
     "reflux": "0.2.7",
     "showdown": "^1.1.0",
     "superagent": "^1.2.0",
