--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "proxy-addr": "^1.0.8",
     "qs": "^6.0.0",
     "react-addons-test-utils": "^0.14.6",
+    "react-dom": "0.14.8",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
     "supervisor": "^0.9.1",
