--- a/package.json
+++ b/package.json
@@ -10,55 +10,34 @@
     "node": ">= v0.8.0"
   },
   "devDependencies": {
-    "aws-sdk-apis": "^3.1.10",
-    "babel": "^5.8.23",
-    "babelify": "^6.3.0",
+    "babel-eslint": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.3.0",
     "body-parser": "^1.14.1",
+    "browserify": "^10.2.4",
     "chai": "^2.1.2",
-    "debug": "^2.2.0",
-    "depd": "^1.1.0",
-    "destroy": "^1.0.3",
-    "eslint": "2.2.0",
-    "gulp-eslint": "2.0.0",
-    "babel-eslint": "5.0.0",
+    "envify": "^3.4.0",
     "eslint-plugin-ideal": "^0.1.2",
     "eslint-plugin-react": "^3.1.0",
-    "etag": "^1.7.0",
-    "express": "^4.9.4",
-    "finalhandler": "^0.2.0",
-    "gulp": "^3.9.0",
-    "gulp-cssmin": "^0.1.7",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "2.0.0",
     "gulp-headerfooter": "^1.0.3",
-    "gulp-minify-css": "^1.2.1",
     "gulp-mocha": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.4.3",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
-    "http": "~0.0",
-    "jade": "1.7",
-    "jsdom": "^3.0.2",
-    "media-typer": "^0.3.0",
     "merge-stream": "^1.0.0",
-    "mocha": "^2.3.4",
-    "ms": "^0.6.2",
-    "mysql": "~2.5",
-    "nconf": "^0.8.2",
-    "on-finished": "^2.3.0",
-    "proxy-addr": "^1.0.8",
-    "qs": "^6.0.0",
-    "react-addons-test-utils": "^0.14.6",
-    "react-dom": "0.14.8",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
-    "supervisor": "^0.9.1",
-    "uglify": "^0.1.5",
-    "utils-merge": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "when": "~3.1.0",
-    "xml2js": "^0.4.15",
-    "xmlbuilder": "^4.1.0"
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   },
   "browserify": {
     "transform": [
@@ -76,35 +55,21 @@
     "watchDOCKER": "gulp watch --docker"
   },
   "dependencies": {
-    "babel-core": "^5.8.24",
-    "browserify": "^10.2.4",
-    "browserify-notify": "^1.1.2",
     "classnames": "^2.1.2",
     "cross-storage": "^0.7.0",
-    "domready": "^1.0.8",
-    "envify": "^3.4.0",
-    "es6-promise": "^3.0.2",
-    "evercookie": "^0.3.0",
-    "gulp": "^3.8.11",
-    "gulp-babel": "^5.1.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-nodemon": "^2.0.3",
-    "gulp-notify": "^2.2.0",
+    "react": "^0.14.6",
+    "react-bootstrap": "^0.28.2",
+    "reflux": "0.2.7",
     "lodash": "^3.10.1",
     "lodash.some": "*",
     "lodash.sortby": "^3.1.4",
     "lodash.sortbyorder": "^3.1.4",
-    "moment": "^2.10.3",
-    "npm": "^2.10.1",
-    "plus-wrio-app": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
-    "react": "^0.14.6",
-    "react-bootstrap": "^0.28.2",
-    "react-router": "^2.0.1",
-    "reflux": "0.2.7",
+    "domready": "^1.0.8",
+    "jsdom": "^3.0.2",
+    "react-addons-test-utils": "^0.14.6",
+    "react-dom": "0.14.8",
     "showdown": "^1.1.0",
     "superagent": "^1.2.0",
-    "uglifyify": "^3.0.1",
-    "watchify": "^3.2.1",
     "yargs": "^3.23.0"
   }
 }
