--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "1.7.0",
     "gulp-uglify": "^1.5.1",
     "merge-stream": "^1.0.0",
     "should": "^8.1.1",
