--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ node_js:
 env:
   - CXX=g++-4.8
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 
 install :
   - npm install -g gulp yarn
