--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "node": ">= v0.8.0"
   },
   "devDependencies": {
-    "babel-register": "^6.9.0",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.9.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.14.1",
     "browserify": "^10.2.4",
@@ -37,8 +37,9 @@
     "supertest": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.3.3",
+    "webpack-bundle-analyzer": "^2.3.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "babel": {
     "env": {
