--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-polyfill": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-commonjs":"6.24.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -27,7 +28,7 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "2.0.0",
     "gulp-headerfooter": "^1.0.3",
-    "gulp-mocha": "^2.2.0",
+    "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "1.7.3",
@@ -70,6 +71,7 @@
     "lodash.some": "*",
     "lodash.sortby": "^3.1.4",
     "lodash.sortbyorder": "^3.1.4",
+    "lodash.clonedeep": "4.5.0",
     "react": "^0.14.6",
     "react-addons-test-utils": "^0.14.6",
     "react-bootstrap": "^0.30.7",
