Allow local development

--- a/package.json
+++ b/package.json
@@ -9,6 +9,36 @@
   "engines": {
     "node": ">= v0.8.0"
   },
+  "dependencies": {
+    "bignumber.js": "2.4.0",
+    "classnames": "^2.1.2",
+    "cross-storage": "^0.8.1",
+    "domready": "^1.0.8",
+    "draft-js": "^0.8.0",
+    "es6-symbol": "3.1.0",
+    "eth-lightwallet": "^2.5.4",
+    "ethereumjs-tx": "^1.1.2",
+    "ethereumjs-util": "4.5.0",
+    "immutable": "^3.8.1",
+    "jsdom": "^3.0.2",
+    "lodash": "^4.17.4",
+    "lodash.keyby": "^4.6.0",
+    "lodash.some": "*",
+    "lodash.sortby": "^3.1.4",
+    "lodash.sortbyorder": "^3.1.4",
+    "node-http-proxy": "^0.2.3",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^0.14.6",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.5.4",
+    "react-modal": "^1.4.0",
+    "react-prop-types": "0.4.0",
+    "reflux": "0.2.7",
+    "showdown": "^1.1.0",
+    "superagent": "^1.2.0",
+    "vhost": "^3.0.2",
+    "yargs": "^3.23.0"
+  },
   "devDependencies": {
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -21,6 +51,8 @@
     "body-parser": "^1.14.1",
     "browserify": "^10.2.4",
     "chai": "^2.1.2",
+    "connect": "^3.6.2",
+    "ejs": "^2.5.6",
     "envify": "^3.4.0",
     "eslint-plugin-ideal": "^0.1.2",
     "eslint-plugin-react": "^3.1.0",
@@ -37,9 +69,9 @@
     "supertest": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "webpack": "^2.3.3",
+    "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.5"
   },
   "babel": {
     "env": {
@@ -55,102 +87,10 @@
     "build": "gulp && sh compress.sh",
     "start": "npm run build",
     "buildDOCKER": "gulp",
+    "devserver": "node ./src/devserver/index.js",
     "w": "npm run watch",
     "watch": "gulp watch",
     "bundleDOCKER": "gulp --docker",
     "watchDOCKER": "gulp watch --docker"
-  },
-  "dependencies": {
-    "classnames": "^2.1.2",
-    "cross-storage": "^0.8.1",
-    "domready": "^1.0.8",
-    "draft-js": "^0.8.0",
-    "es6-symbol": "3.1.0",
-    "immutable": "^3.8.1",
-    "jsdom": "^3.0.2",
-    "lodash": "^4.17.4",
-    "lodash.keyby": "^4.6.0",
-    "lodash.some": "*",
-    "lodash.sortby": "^3.1.4",
-    "lodash.sortbyorder": "^3.1.4",
-    "node-http-proxy": "^0.2.3",
-    "react": "^0.14.6",
-    "react-addons-test-utils": "^0.14.6",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "0.14.8",
-    "react-modal": "^1.4.0",
-    "react-prop-types": "0.4.0",
-    "reflux": "0.2.7",
-    "showdown": "^1.1.0",
-    "superagent": "^1.2.0",
-    "yargs": "^3.23.0"
-  },
-  "resolutions": {
-    "babel-register": "6.18.0",
-    "babel-core": "6.18.2",
-    "babel-helper-define-map": "6.18.0",
-    "babel-helper-optimise-call-expression": "6.18.0",
-    "babel-helper-replace-supers": "6.18.0",
-    "babel-runtime": "6.18.0",
-    "lodash": "4.17.2",
-    "yargs": "3.32.0",
-    "acorn": "4.0.3",
-    "esprima": "3.1.2",
-    "estraverse": "4.2.0",
-    "source-map": "0.4.4",
-    "wordwrap": "1.0.0",
-    "domelementtype": "1.3.0",
-    "inherits": "2.0.3",
-    "readable-stream": "1.0.27-1",
-    "form-data": "2.1.2",
-    "qs": "6.3.0",
-    "uuid": "3.0.1",
-    "commander": "2.3.0",
-    "escape-string-regexp": "1.0.5",
-    "supports-color": "3.1.2",
-    "xtend": "4.0.1",
-    "assert-plus": "1.0.0",
-    "punycode": "1.3.2",
-    "core-js": "2.4.1",
-    "warning": "2.1.0",
-    "eventemitter3": "0.1.6",
-    "debug": "2.3.3",
-    "async": "1.5.2",
-    "string-width": "2.0.0",
-    "lodash.assign": "4.2.0",
-    "mkdirp": "0.5.1",
-    "object-assign": "4.1.0",
-    "commondir": "1.0.1",
-    "minimist": "1.2.0",
-    "jsesc": "1.3.0",
-    "convert-source-map": "1.3.0",
-    "minimatch": "3.0.3",
-    "repeating": "2.0.1",
-    "bytes": "2.4.0",
-    "iconv-lite": "0.4.13",
-    "assert": "1.4.1",
-    "buffer": "4.9.1",
-    "concat-stream": "1.5.2",
-    "crypto-browserify": "3.11.0",
-    "events": "1.1.1",
-    "glob": "7.1.1",
-    "https-browserify": "0.0.1",
-    "through2": "1.1.1",
-    "json-stable-stringify": "1.0.1",
-    "graceful-fs": "4.1.11",
-    "interpret": "1.0.1",
-    "semver": "4.3.6",
-    "vinyl": "1.2.0",
-    "strip-bom": "2.0.0",
-    "is-glob": "3.1.0",
-    "end-of-stream": "1.0.0",
-    "user-home": "2.0.0",
-    "rimraf": "2.2.8",
-    "colors": "1.1.2",
-    "nopt": "1.0.10",
-    "uglify-js": "2.7.5",
-    "memory-fs": "0.3.0",
-    "faye-websocket": "0.11.0",
-    "url-parse": "1.0.5"
   }
 }
