--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install :
 script:
   - gulp
   - gulp test
-  - sh compress.sh
+  - bash compress.sh
 
 before_deploy:
 - gem install mime-types -v 2.6.2
