--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "lodash.sortbyorder": "^3.1.4",
     "node-http-proxy": "^0.2.3",
     "react": "^15.5.4",
-    "react-addons-test-utils": "^15.2.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.5.4",
     "react-modal": "^1.4.0",
@@ -42,8 +41,8 @@
   "devDependencies": {
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
     "babel-polyfill": "^6.16.0",
-    "babel-plugin-transform-es2015-modules-commonjs":"6.24.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -66,6 +65,7 @@
     "gulp-sourcemaps": "1.7.3",
     "gulp-uglify": "^1.5.1",
     "merge-stream": "^1.0.0",
+    "node-gyp": "^3.6.1",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
