--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
 
 node_js:
   - 8.0.0
-np
+
 
 install :
   - npm install
@@ -17,6 +17,8 @@ script:
   - gulp test
   - bash compress.sh
 
+before_deploy:
+  - gem install mime-types -v 2.6.2
 
 deploy:
   provider: s3
