--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,18 @@ env:
 node_js:
   - 8.0.0
 
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 
 install :
+  - npm install -g gulp yarn@0.17
   - npm install
 
 
@@ -18,7 +28,7 @@ script:
   - bash compress.sh
 
 before_deploy:
-  - gem install mime-types -v 2.6.2
+- gem install mime-types -v 2.6.2
 
 deploy:
   provider: s3
