--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eth-lightwallet": "^2.5.4",
     "ethereumjs-tx": "^1.1.2",
     "ethereumjs-util": "4.5.0",
+    "express-http-proxy": "^1.0.3",
     "immutable": "^3.8.1",
     "jsdom": "^11.0.0",
     "lodash": "^4.17.4",
@@ -33,7 +34,6 @@
     "react-modal": "^1.4.0",
     "react-prop-types": "0.4.0",
     "reflux": "0.2.7",
-    "showdown": "^1.1.0",
     "superagent": "^1.2.0",
     "vhost": "^3.0.2",
     "yargs": "^3.23.0"
