Add webgold Update webgold

--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "lodash.some": "*",
     "lodash.sortby": "^3.1.4",
     "lodash.sortbyorder": "^3.1.4",
+    "moment": "^2.18.1",
     "node-http-proxy": "^0.2.3",
+    "numeral": "^2.0.6",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.5.4",
     "react-modal": "^1.4.0",
     "react-prop-types": "0.4.0",
+    "react-router": "^4.1.1",
     "reflux": "0.2.7",
     "superagent": "^1.2.0",
     "vhost": "^3.0.2",
