--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "gulp-uglify": "^1.5.1",
     "merge-stream": "^1.0.0",
     "node-gyp": "^3.6.1",
+    "react-addons-test-utils": "^15.5.1",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
