--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">= v0.8.0"
   },
   "dependencies": {
+    "babel-plugin-syntax-flow": "^6.18.0",
     "bignumber.js": "2.4.0",
     "classnames": "^2.1.2",
     "cross-storage": "^0.8.1",
@@ -20,6 +21,7 @@
     "ethereumjs-tx": "^1.1.2",
     "ethereumjs-util": "4.5.0",
     "express-http-proxy": "^1.0.3",
+    "flow-bin": "^0.47.0",
     "immutable": "^3.8.1",
     "jsdom": "^11.0.0",
     "lodash": "^4.17.4",
@@ -45,7 +47,9 @@
   "devDependencies": {
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
