--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-dom": "^15.5.4",
     "react-modal": "^1.4.0",
     "react-prop-types": "0.4.0",
-    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "reflux": "0.2.7",
     "superagent": "^1.2.0",
     "vhost": "^3.0.2",
