--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,10 @@
 [ignore]
-<PROJECT_ROOT>/node_modules/.*
+.*/node_modules/**
+<PROJECT_ROOT>/bower_components/.*
+<PROJECT_ROOT>/coverage/.*
+<PROJECT_ROOT>/build/.*
+<PROJECT_ROOT>/hub/.*
 [include]
-
 [libs]
 
 [options]
