make display work add flow support refactor document store

--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
     "node-http-proxy": "^0.2.3",
     "numeral": "^2.0.6",
     "nyc": "^11.0.2",
-    "react": "^15.5.4",
+    "react": "^15.6.1",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "next",
     "react-modal": "^1.4.0",
     "react-prop-types": "0.4.0",
     "react-router-dom": "^4.1.1",
+    "redbox-react": "^1.4.2",
     "reflux": "^6.4.1",
-    "superagent": "^1.2.0",
+    "superagent": "^3.5.2",
     "vhost": "^3.0.2",
     "yargs": "^3.23.0"
   },
