--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "start": "npm run build",
     "devserver": "node ./src/devserver/index.js",
     "dockerserver": "export DOCKER_DEV=true; node ./src/devserver/index.js",
-    "test": "nyc mocha --compilers js:babel-core/register --recursive"
+    "test": "nyc mocha --compilers js:babel-core/register --recursive",
+    "flow": "flow check"
   }
 }
