--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-http-proxy": "^1.0.3",
     "flow-bin": "^0.47.0",
     "immutable": "^3.8.1",
+    "jquery": "^3.2.1",
     "jsdom": "^11.0.0",
     "lodash": "^4.17.4",
     "lodash.keyby": "^4.6.0",
