--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "envify": "^3.4.0",
     "eslint-plugin-ideal": "^0.1.2",
     "eslint-plugin-react": "^3.1.0",
+    "fsevents": "^1.1.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "2.0.0",
     "gulp-headerfooter": "^1.0.3",
