--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "connect": "^3.6.2",
     "ejs": "^2.5.6",
     "envify": "^3.4.0",
+    "enzyme": "^2.9.1",
     "eslint-plugin-ideal": "^0.1.2",
     "eslint-plugin-react": "^3.1.0",
     "expect": "^1.20.2",
@@ -85,9 +86,12 @@
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "1.7.3",
     "gulp-uglify": "^1.5.1",
+    "jest": "^20.0.4",
     "merge-stream": "^1.0.0",
+    "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
     "react-addons-test-utils": "^15.5.1",
+    "redux-mock-store": "^1.2.3",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
