--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
     "react-addons-test-utils": "^15.5.1",
+    "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
@@ -109,6 +110,10 @@
         ]
       }
     }
+  },
+  "jest": {
+     "collectCoverage": true,
+     "coverageFormats": ["json", "html"]
   },
   "scripts": {
     "build": "gulp && sh compress.sh",
