--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
-    "react-hot-loader": "next",
+    "react-hot-loader": "3.0.0-beta.7",
     "react-modal": "^2.3.2",
     "react-prop-types": "0.4.0",
     "react-redux": "^5.0.5",
@@ -93,13 +93,13 @@
     "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
     "react-addons-test-utils": "^15.5.1",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.3",
     "should": "^8.1.1",
     "supertest": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "webpack": "^3.5.5",
+    "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-server": "^2.7.1"
   },
@@ -125,7 +125,8 @@
     "start": "npm run build",
     "devserver": "node --max_old_space_size=8000 ./src/devserver/index.js",
     "dockerserver": "export DOCKER_DEV=true; node ./src/devserver/index.js",
-    "test": "nyc mocha --compilers js:babel-core/register --require babel-polyfill --recursive",
+    "test": "export NODE_PATH=./src/ && jest ",
+    "testw": "export NODE_PATH=./src/ && jest --watch",
     "flow": "flow check"
   }
 }
