--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "yargs": "^3.23.0"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.0",
+    "airbnb-style": "^2.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
@@ -75,8 +75,6 @@
     "ejs": "^2.5.6",
     "envify": "^3.4.0",
     "enzyme": "^2.9.1",
-    "eslint-plugin-ideal": "^0.1.2",
-    "eslint-plugin-react": "^3.1.0",
     "expect": "^1.20.2",
     "fsevents": "^1.1.2",
     "gulp": "^3.9.1",
@@ -92,6 +90,7 @@
     "merge-stream": "^1.0.0",
     "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
+    "prettier-eslint": "^8.2.0",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.3",
