--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "domready": "^1.0.8",
     "draft-js": "^0.8.0",
     "es6-symbol": "3.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eth-lightwallet": "^2.5.4",
     "ethereumjs-tx": "^1.1.2",
     "ethereumjs-util": "4.5.0",
@@ -57,7 +59,6 @@
     "yargs": "^3.23.0"
   },
   "devDependencies": {
-    "airbnb-style": "^2.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
@@ -75,15 +76,14 @@
     "ejs": "^2.5.6",
     "envify": "^3.4.0",
     "enzyme": "^2.9.1",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-react": "^7.4.0",
     "expect": "^1.20.2",
     "fsevents": "^1.1.2",
     "gulp": "^3.9.1",
-    "gulp-eslint": "2.0.0",
-    "gulp-headerfooter": "^1.0.3",
-    "gulp-istanbul": "^1.1.2",
-    "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.0.3",
-    "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "1.7.3",
     "gulp-uglify": "^1.5.1",
     "jest": "^20.0.4",
@@ -126,6 +126,7 @@
     "dockerserver": "export DOCKER_DEV=true; node ./src/devserver/index.js",
     "test": "export NODE_PATH=./src/ && jest ",
     "testw": "export NODE_PATH=./src/ && jest --watch",
-    "flow": "flow check"
+    "flow": "flow check",
+    "lint": "eslint src"
   }
 }
