--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "parser": "babel-eslint",
   "plugins": ["flowtype"],
   "rules": {
+    "class-methods-use-this": 0,
     "no-mixed-operators": [0, { "allowSamePrecedence": true }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
