--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
     "prettier-eslint": "^8.2.0",
+    "prettier-eslint-cli": "^4.4.0",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.3",
