--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.2.1",
     "jsdom": "^11.0.0",
     "lodash": "^4.17.4",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.keyby": "^4.6.0",
     "lodash.some": "*",
     "lodash.sortby": "^3.1.4",
