--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">= v0.8.0"
   },
   "dependencies": {
+    "babel-eslint": "^8.0.2",
     "babel-plugin-syntax-flow": "^6.18.0",
     "bignumber.js": "2.4.0",
     "bower": "^1.8.0",
