--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "redux-connect": "^5.1.0",
     "redux-form": "^7.0.4",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^0.17.0",
     "redux-thunk": "^2.2.0",
     "reflux": "^6.4.1",
+    "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
     "superagent": "^3.5.2",
     "vhost": "^3.0.2",
