--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-react": "^7.4.0",
     "expect": "^1.20.2",
-    "fsevents": "^1.1.2",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.0.3",
     "gulp-sourcemaps": "1.7.3",
@@ -107,22 +106,19 @@
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-server": "^2.7.1"
   },
+  "optional": {
+    "fsevents": "^1.1.2"
+  },
   "babel": {
     "env": {
       "production": {
-        "plugins": [
-          "transform-react-constant-elements",
-          "transform-react-inline-elements"
-        ]
+        "plugins": ["transform-react-constant-elements", "transform-react-inline-elements"]
       }
     }
   },
   "jest": {
     "collectCoverage": true,
-    "coverageFormats": [
-      "json",
-      "html"
-    ]
+    "coverageFormats": ["json", "html"]
   },
   "scripts": {
     "build": "gulp && sh compress.sh",
