--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["react","es2015","stage-0"]
+  "presets": ["react","es2015","stage-0"],
+  "plugins" : [
+    "transform-runtime",
+    ["module-resolver", {
+      "base": ["./src/base"],
+      "CoreEditor": ["./src/CoreEditor"]
+    }]
+  ]
 }
