--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,11 @@
   },
   "parser": "babel-eslint",
   "plugins": ["flowtype"],
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  },
   "rules": {
     "class-methods-use-this": 0,
     "no-mixed-operators": [0, { "allowSamePrecedence": true }],
