--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
     "ejs": "^2.5.6",
     "envify": "^3.4.0",
     "enzyme": "^2.9.1",
-    "eslint": "^4.8.0",
+    "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.0.0",
-    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-flowtype": "^2.43.0",
     "eslint-plugin-react": "^7.4.0",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
@@ -93,7 +93,7 @@
     "merge-stream": "^1.0.0",
     "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
-    "prettier-eslint": "^8.2.0",
+    "prettier-eslint": "^8.8.0",
     "prettier-eslint-cli": "^4.4.0",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^16.0.0",
@@ -112,7 +112,10 @@
   "babel": {
     "env": {
       "production": {
-        "plugins": ["transform-react-constant-elements", "transform-react-inline-elements"]
+        "plugins": [
+          "transform-react-constant-elements",
+          "transform-react-inline-elements"
+        ]
       }
     }
   },
