--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "flow-bin": "^0.47.0",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
-    "jsdom": "^11.0.0",
     "lodash": "^4.17.4",
     "lodash.clonedeep": "^4.5.0",
     "lodash.keyby": "^4.6.0",
@@ -90,6 +89,7 @@
     "gulp-sourcemaps": "1.7.3",
     "gulp-uglify": "^1.5.1",
     "jest": "^20.0.4",
+    "jsdom": "^11.0.0",
     "merge-stream": "^1.0.0",
     "nock": "^9.0.14",
     "node-gyp": "^3.6.1",
@@ -121,7 +121,10 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageFormats": ["json", "html"]
+    "coverageFormats": [
+      "json",
+      "html"
+    ]
   },
   "scripts": {
     "build": "gulp && sh compress.sh",
