--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-prop-types": "0.4.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "recharts": "^1.6.2",
     "redbox-react": "^1.4.2",
     "redux": "^3.7.2",
     "redux-connect": "^5.1.0",
