--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "numeral": "^2.0.6",
     "nyc": "^11.0.2",
     "react": "^16.0.0",
+    "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-hot-loader": "3.0.0-beta.7",
