--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash.some": "*",
     "lodash.sortby": "^3.1.4",
     "lodash.sortbyorder": "^3.1.4",
+    "mapbox-gl": "0.43.0",
     "material-ui": "^0.18.1",
     "moment": "^2.18.1",
     "node-http-proxy": "^0.2.3",
@@ -44,7 +45,7 @@
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-hot-loader": "3.0.0-beta.7",
-    "react-mapbox-gl": "^3.5.0",
+    "react-mapbox-gl": "3.5.0",
     "react-modal": "^2.3.2",
     "react-prop-types": "0.4.0",
     "react-redux": "^5.0.5",
