--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "reflux": "^6.4.1",
     "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
-    "styled-components": "^3.1.0",
+    "styled-components": "3.1.0",
     "superagent": "3.5.2",
     "vhost": "^3.0.2",
     "yargs": "^3.23.0"
