--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-hot-loader": "3.0.0-beta.7",
-    "react-mapbox-gl": "3.5.0",
+    "react-mapbox-gl": "^3.9.0",
     "react-modal": "^2.3.2",
     "react-prop-types": "0.4.0",
     "react-redux": "^5.0.5",
