--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "start": "npm run build",
     "devserver": "node --max_old_space_size=8000 ./src/devserver/index.js",
     "dockerserver": "export DOCKER_DEV=true; node ./src/devserver/index.js",
+    "test": "export NODE_PATH=./src/ && jest ",
     "flow": "flow check",
     "lint": "eslint src"
   }
