--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
     "styled-components": "3.1.0",
-    "superagent": "3.5.2",
+    "superagent": ">=3.7.0",
     "vhost": "^3.0.2",
     "yargs": "^3.23.0"
   },
@@ -109,8 +109,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.3.1",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-bundle-analyzer": ">=3.3.2",
+    "webpack-dev-server": ">=3.1.11"
   },
   "optional": {
     "fsevents": "^1.1.2"
