--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "node": ">= v0.8.0"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "babel-eslint": "^8.0.2",
     "babel-plugin-syntax-flow": "^6.18.0",
     "bignumber.js": "2.4.0",
     "bower": "^1.8.0",
     "classnames": "^2.1.2",
     "cross-storage": "^0.8.1",
+    "css-loader": "^3.4.2",
     "domready": "^1.0.8",
     "draft-js": "^0.8.0",
     "es6-symbol": "3.1.0",
@@ -24,6 +26,7 @@
     "eth-lightwallet": "^3.0.1",
     "ethereumjs-tx": "^1.1.2",
     "ethereumjs-util": "4.5.0",
+    "express": "^4.17.1",
     "express-http-proxy": "^1.0.3",
     "flow-bin": "^0.47.0",
     "immutable": "^3.8.1",
@@ -40,16 +43,17 @@
     "node-http-proxy": "^0.2.3",
     "numeral": "^2.0.6",
     "nyc": "^11.0.2",
-    "react": "^16.0.0",
+    "react": "^16.12.0",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.31.3",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.12.0",
     "react-hot-loader": "3.0.0-beta.7",
     "react-mapbox-gl": "^3.9.0",
     "react-modal": "^2.3.2",
     "react-prop-types": "0.4.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-toastify": "^5.5.0",
     "react-tooltip-lite": "^1.9.5",
     "recharts": "^1.6.2",
     "redbox-react": "^1.4.2",
@@ -62,6 +66,7 @@
     "reflux": "^6.4.1",
     "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
+    "style-loader": "^1.1.3",
     "styled-components": "3.1.0",
     "superagent": ">=3.7.0",
     "vhost": "^3.0.2",
