--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "browserify": "^10.2.4",
     "chai": "^2.1.2",
     "connect": "^3.6.2",
-    "ejs": "^2.5.6",
+    "ejs": "2.5.6",
     "envify": "^3.4.0",
     "enzyme": "^2.9.1",
     "eslint": "^4.17.0",
